--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGODB_CONNECTION_STRING = mongodb://localhost:27017/Registration
+MONGODB_CONNECTION_STRING = mongodb+srv://spking222005:SayHi_29@authenticationjwt.poxg6.mongodb.net/registration
 JWT_SECRET_KEY = noonecanfind
