--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6"
