--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,1 @@
-VITE_SERVER_API_URL = http://127.0.0.1:3000
-# VITE_SERVER_API_URL = https://registration-authentication.onrender.com
+VITE_SERVER_API_URL = https://registration-authentication.onrender.com
